--- a/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
@@ -6,6 +6,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/inicio}">Inicio</a>
                 </li>
+                <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','SUPERADMIN')">
+                    <a class="nav-link" th:href="@{/videojuego/crudVideojuego}">CRUD</a>
+                </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/registro}">Registro</a>
                 </li>
