--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/videojuego.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/videojuego.html
@@ -31,7 +31,13 @@
                                 <div class="text-danger" th:if="${#fields.hasErrors('estudio')}" th:errors="*{estudio}"></div>
                             </div>
 
-            <!--                <div class="form-group col-md-12">
+                            <div class="form-group col-md-6">
+                                <label for="imagen_portada">Link imagen de portada:</label>
+                                <input type="text" class="form-control" id="imagen_portada" th:field="*{img_portada}">
+                                <div class="text-danger" th:if="${#fields.hasErrors('img_portada')}" th:errors="*{img_portada}"></div>
+                            </div>
+
+                        <!--    <div class="form-group col-md-12">
                                 <label for="archivo" class="form-label">Imagen: </label>
                                 <input type="file" class="form-control" id="archivo" name="archivo">
                                 <div class="text-danger" th:if="${imageErrorMsg}" th:text="${imageErrorMsg}"></div>
