agregada vista de detalle tarjeta
falta redireccionar bien

--- a/pagina-videojuegos/src/main/resources/templates/views/admin/eliminarAdmin.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/admin/eliminarAdmin.html
@@ -28,29 +28,9 @@
         <td th:text="${admins.apellido}"></td>
         <td th:text="${admins.email}"></td>
         <td>
-
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Eliminar
-            </button>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Desea eliminar a este admin?</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <form th:action="@{/eliminarAdmin/{id}(id=${admins.id})}" method="post">
-                    <button type="submit" class="btn btn-primary">Eliminar Usuario</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
+          <form th:action="@{/usuarios/eliminarAdmin/{id}(id=${admins.id})}" method="post">
+            <button type="submit" class="btn btn-primary">Eliminar Usuario</button>
+          </form>
         </td>
       </tr>
       </tbody>
