--- a/pagina-videojuegos/src/main/resources/templates/views/admin/rgtAdmins.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/admin/rgtAdmins.html
@@ -13,7 +13,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-body">
-                    <form th:action="@{/rgtAdmins}" method="post" th:object="${admin}">
+                    <form th:action="@{/usuarios/rgtAdmins}" method="post" th:object="${admin}">
                         <h1>Registro de administrador</h1>
                         <div class="form-group col-md-6">
                             <label for="nombre">Nombre:</label>
