--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/registro.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/registro.html
@@ -14,7 +14,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-body">
-            <form th:action="@{/registro}" method="post" th:object="${usuario}">
+            <form th:action="@{/usuarios/registro}" method="post" th:object="${usuario}">
                 <h1>Registro</h1>
                 <div class="form-group col-md-6">
                     <label for="nombre">Nombre:</label>
