--- a/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
@@ -4,13 +4,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/inicio}">Inicio</a>
+                    <a class="nav-link" th:href="@{/usuarios/inicio}">Inicio</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','SUPERADMIN')">
                     <a class="nav-link" th:href="@{/videojuego/crudVideojuego}">CRUD</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a class="nav-link" th:href="@{/registro}">Registro</a>
+                    <a class="nav-link" th:href="@{/usuarios/registro}">Registro</a>
                 </li>
             </ul>
         </div>
@@ -22,12 +22,12 @@
             </button>
             <ul class="dropdown-menu">
                 <li><button class="dropdown-item" type="button" sec:authorize="hasRole('ROLE_SUPERADMIN')"><a
-                        th:href="@{/rgtAdmins}">Crear Admin</a></button></li>
+                        th:href="@{/usuarios/rgtAdmins}">Crear Admin</a></button></li>
 
                 <li><button class="dropdown-item" type="button" sec:authorize="hasRole('ROLE_SUPERADMIN')">
-                    <a th:href="@{/eliminarAdmin}">Eliminar Admin</a></button></li>
+                    <a th:href="@{/usuarios/eliminarAdmin}">Eliminar Admin</a></button></li>
 
-                <li><button class="dropdown-item btn btn-danger" type="button"> <a th:href="@{/logout}">Cerrar sesion</a></button></li>
+                <li><button class="dropdown-item btn btn-danger" type="button"> <a th:href="@{/usuarios/logout}">Cerrar sesion</a></button></li>
             </ul>
         </div>
 </nav>
