--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/login.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/login.html
@@ -16,7 +16,7 @@
         <div class="card-body">
 
           <h1>Inicio de sesión</h1>
-      <form th:action="@{/login}" method="post">
+      <form th:action="@{/usuarios/login}" method="post">
 
         <div th:if=${param.error}>
           <div class="alert alert-danger">Usuario o contraseña
@@ -51,7 +51,7 @@
         </div>
       </form>
       <div class="form-group">
-        <span>Si eres nuevo usuario <a th:href="@{/registro}">regístrate aqui</a></span>
+        <span>Si eres nuevo usuario <a th:href="@{/usuarios/registro}">regístrate aqui</a></span>
       </div>
     </div>
   </div>
