--- a/pagina-videojuegos/src/main/resources/templates/views/crudVideojuego.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/crudVideojuego.html
@@ -12,16 +12,19 @@
 
     <div class="container">
 
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-3">
                 <h4>CRUD Videojuego</h4>
             </div>
-            <div class="col-9 d-flex flex-row-reverse">
+            <div class="col-4 d-flex flex-row-reverse">
+                <a th:href="@{/videojuego/formulario/videojuego/0}" class="btn btn-success">Ir a CRUD Merch</a>
+            </div>
+            <div class="col-5 d-flex flex-row-reverse">
                 <a th:href="@{/videojuego/formulario/videojuego/0}" class="btn btn-success">Agregar Videojuego</a>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-12">
                 <table class="table">
                     <thead class="thead-dark">
@@ -71,6 +74,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
