agregadas bibliotecas, detalle compra y vinculacion de botones
falta modificar las vistas para que se vean bien y agregar un valid

--- a/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
@@ -1,16 +1,19 @@
 <nav th:fragment="nav_bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/usuarios/inicio}">GO Games</a>
+        <a class="navbar-brand" th:href="@{/categoria/inicio}">GO Games</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/usuarios/inicio}">Inicio</a>
+                    <a class="nav-link" th:href="@{/categoria/inicio}">Inicio</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','SUPERADMIN')">
                     <a class="nav-link" th:href="@{/videojuego/crudVideojuego}">CRUD</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/usuarios/registro}">Registro</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/usuarios/videojuego/biblioteca}">Biblioteca</a>
                 </li>
             </ul>
         </div>
