--- a/pagina-videojuegos/src/main/resources/templates/views/detalle.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/detalle.html
@@ -32,10 +32,8 @@
             <br>
             <br>
             <div>
-                <button style="margin-left: 2.5em;" type="button" class="btn btn-danger btn-lg">Comprar</button>
+                <a th:href="@{/compra/videojuego/detalle-compra/{id}(id=${videojuego.id})}" class="btn btn-danger btn-lg" type="button" style="margin-left: 2.5em;">Comprar</a>
             </div>
-
-
         </div>
 
         <div class="container">
