--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/ingresoimg.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/ingresoimg.html
@@ -22,16 +22,38 @@
                 <h4 class="text-center">Ingresar imagenes para el producto: <small th:text="${videojuego.nombre}"></small></h4>
               </div>
 
-              <form class="row mb-3" th:action="@{/videojuego/postingresoimg/videojuego/{id}(id=${videojuego.id})}" method="post" th:object="${imagen}" enctype="multipart/form-data">
+
+
+                <form th:action="@{/videojuego/postingresoimg/videojuego/{id}(id=${videojuego.id})}" th:object="${imagen}" method="post">
+
+                    <div class="errorblock" th:if="${#fields.hasErrors('*')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('*')}"
+                                th:text="${err}">Input is incorrect</li>
+                        </ul>
+                    </div>
+
+                </form>
+
+                <tr>
+                    <td><label th:text="#{form.user.nombre}">Nombre: </label></td>
+                    <td><input type="text" th:field="*{nombre}" /></td>
+                    <td th:if="${#fields.hasErrors('nombre')}">
+                        <span th:errors="*{nombre}" />
+                    </td>
+                </tr>
+
+
+
+
+              <!--<form class="row mb-3" >th:action="@{/videojuego/postingresoimg/videojuego/{id}(id=${videojuego.id})}">
                 <label class="col-sm-2 col-form-label">Link de la imagen:</label>
-                <div class="col-sm-10" for="link">
-                  <input type="text" class="form-control" id="link">
-            <!--      <div class="text-danger" th:if="${#fields.hasErrors('link')}" th:errors="*{link}"></div> -->
-                </div>
-                <button type="submit" class="btn btn-primary mt-3 col-2">Ingresa imagen</button>
+                  <input type="search" placeholder="Buscar..." aria-label="Search" class="form-control" name="link">
+                <button th:href="@{/categoria/inicio}" type="submit" class="btn btn-primary mt-3 col-2">Ingresa imagen</button>
               </form>
 
-
+              <a th:action="@{/categoria/inicio}">Ingresa imagen</a>
+                -->
               <div class="mt-5">
                 <h4>Imagenes del producto: <small th:text="${videojuego.nombre}"></small></h4>
               </div>
