--- a/pagina-videojuegos/src/main/resources/templates/views/inicio.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/inicio.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    
+
 </head>
 <body style="background: #121212">
  <nav th:replace="components/nav-bar :: nav_bar"></nav>
@@ -48,7 +48,8 @@
          <div class="col-8"><br>
              <div class="div">
                  <div class="btn-group" th:each="categoria : ${categorias}">
-                     <button style="margin-left: 2.5em;" type="button" class="btn btn-secondary btn-lg" th:text="${categoria.tipo}" ></button>
+                     <a th:href="@{/categoria/categoriaDetalle/{id}(id=${categoria.id})}" style="margin-left: 2.5em;" class="btn btn-secondary btn-lg" th:text="${categoria.tipo}"></a>
+
                  </div>
              </div>
          </div>
@@ -67,7 +68,8 @@
          <div class="col-8"><br>
              <div class="div">
                  <div class="btn-group" th:each="estudio : ${estudios}">
-                     <button style="margin-left: 2.5em;" type="button" class="btn btn-secondary btn-lg" th:text="${estudio.nombre}" ></button>
+
+                     <a th:href="@{/estudio/estudioDetalle/{id}(id=${estudio.id})}" style="margin-left: 2.5em;" class="btn btn-secondary btn-lg" th:text="${estudio.nombre}"></a>
                  </div>
              </div>
          </div>
