--- a/pagina-videojuegos/src/main/resources/templates/components/img-carousel.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/img-carousel.html
@@ -39,10 +39,10 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" th:src="${videojuego.img_portada}" alt="First slide">
+                <img class="d-block w-100" th:src="@{${videojuego.img_portada}}" alt="First slide">
             </div>
             <div th:each="img : ${imagenes}" class="carousel-item">
-                <img class="d-block w-100" th:src="${img.link}" alt="@{${videojuego.nombre}}">
+                <img class="d-block w-100" th:src="@{${img.link}}" alt="@{${videojuego.nombre}}">
             </div>
 
         </div>
@@ -58,4 +58,6 @@
         </a>
     </div>
 </div>
+
+
 
