--- a/pagina-videojuegos/src/main/resources/templates/views/detalle.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/detalle.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" href="components.css">
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+
+
     <title>Detalle videojuego</title>
 </head>
 <body style="background: #121212"class="d-flex flex-column min-vh-100">
@@ -32,16 +38,15 @@
             <br>
             <br>
             <div>
-                <a th:href="@{/compra/videojuego/detalle-compra/{id}(id=${videojuego.id})}" class="btn btn-danger btn-lg" type="button" style="margin-left: 2.5em;">Comprar</a>
+                <a th:href="@{/compra/videojuego/detalle-compra/{id}(id=${videojuego.id})}" class="btn btn-danger btn-lg" style="margin-left: 2.5em;">Comprar</a>
             </div>
         </div>
 
         <div class="container">
             <div class="col-8"><br>
                 <div class="div">
-                    <button style="margin-left: 2.5em;" type="button" class="btn btn-secondary btn-lg" th:text="${categoria.tipo}" ></button> <!-- HAY QUE AGREGAR QUE EL BOTON
-                     LLEVE A UNA PAGINA CON TODOS LOS VIDEOJUEGOS DE ESA MISMA CATEGORIA -->
-                    <button style="margin-left: 2.5em;" type="button" class="btn btn-secondary btn-lg" th:text="${estudio.nombre}" ></button>
+                    <a  style="margin-left: 2.5em;" th:href="@{/categoria/categoriaDetalle/{id}(id=${categoria.id})}" class="btn btn-secondary btn-lg" th:text="${categoria.tipo}"></a>
+                    <a  style="margin-left: 2.5em;" th:href="@{/estudio/estudioDetalle/{id}(id=${estudio.id})}" class="btn btn-secondary btn-lg" th:text="${estudio.nombre}"></a>
                 </div>
             </div>
         </div><br>
@@ -72,7 +77,7 @@
         <div class="col-12" style="background: #383838; color: white">
             <div class="card" style="background: #383838; color: white">
                 <div class="card-body" style="background: #383838; color: white">
-                    <form style="background: #383838; color: white" class="form-row align-items-center" th:action="@{/videojuego/detalle/{id}(id=${videojuego.id})}" method="post" th:object="${comentarioNuevo}">
+                    <form style="background: #383838; color: white" class="form-row align-items-center" th:action="@{/videojuego/detalle/{idVideojuego}(idVideojuego=${videojuego.id})}" method="post" th:object="${comentarioNuevo}">
                         <div class="row g-3">
                             <div class="form-group col-md-12">
                                 <label for="comentario">Ingrese su comentario: </label>
@@ -82,10 +87,11 @@
                         </div>
                         <div class="form-group" style="margin-left: 2.5em;">
                             <label style="background: #383838; color: white" for="puntaje">Puntaje: </label>
-                                <input style="background: #383838; color: white" type="text" class="form-control" id="puntaje" th:field="*{puntaje}">
+                                <input style="background: #383838; color: white" type="number" class="form-control" id="puntaje" th:field="*{puntaje}">
                         </div>
                         <div style="background: #383838; color: white" class="col-md-6">
-                            <button class="btn btn-danger" type="submit" style="width:100%">Publicar</button>
+                            <br>
+                            <button class="btn btn-danger" type="submit" style="width:50%">Publicar</button>
                         </div>
                     </form>
                 </div>
