--- a/pagina-videojuegos/src/main/resources/templates/views/crudVideojuego.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/crudVideojuego.html
@@ -17,7 +17,7 @@
                 <h4>CRUD Videojuego</h4>
             </div>
             <div class="col-4 d-flex flex-row-reverse">
-                <a th:href="@{/videojuego/formulario/videojuego/0}" class="btn btn-success">Ir a CRUD Merch</a>
+                <a th:href="@{/merch/crudMerch}" class="btn btn-success">Ir a CRUD Merch</a>
             </div>
             <div class="col-5 d-flex flex-row-reverse">
                 <a th:href="@{/videojuego/formulario/videojuego/0}" class="btn btn-success">Agregar Videojuego</a>
