--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarimgmerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarimgmerch.html
@@ -14,7 +14,7 @@
     <div class="col-12">
       <div class="card">
         <div class="card-body">
-          <form th:action="@{/videojuego/posteliminarimg/videojuego/{idVideojuego}/{id}(idVideojuego=${videojuego.id}, id=${imagenid})}" method="post" enctype="multipart/form-data">
+          <form th:action="@{/merch/posteliminarimg/merch/{idMerch}/{id}(idMerch=${merch.id}, id=${imagenid})}" method="post" enctype="multipart/form-data">
             <div class="row g-3 text-center mb-3">
               <div class="form-group col-md-12">
                 <h4>Esta seguro de eliminar esta imagen? </h4>
@@ -30,7 +30,7 @@
                 <button class="btn btn-outline-secondary" type="submit" style="width:100%">Si</button>
               </div>
               <div class="col-md-6">
-                <a class="btn btn-success" th:href="@{/videojuego/ingresoimg/videojuego/{id}(id=${videojuego.id})}" style="width:100%">No</a>
+                <a class="btn btn-success" th:href="@{/merch/ingresoimg/merch/{id}(id=${merch.id})}" style="width:100%">No</a>
               </div>
             </div>
           </form>
