--- a/pagina-videojuegos/src/main/resources/templates/views/crudMerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/crudMerch.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>CRUD</title>
 </head>
+
 <body>
 
+<nav th:replace="components/nav-bar :: nav_bar"></nav>
+
+<div class="container">
+
+    <div class="row mt-3">
+        <div class="col-3">
+            <h4>CRUD Merch</h4>
+        </div>
+        <div class="col-4 d-flex flex-row-reverse">
+            <a th:href="@{/videojuego/crudVideojuego}" class="btn btn-success">Ir a CRUD Videojuego</a>
+        </div>
+        <div class="col-5 d-flex flex-row-reverse">
+            <a th:href="@{/merch/formulario/merch/0}" class="btn btn-success">Agregar Merch</a>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-12">
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">Stock</th>
+                    <th scope="col">Activo</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="merchs : ${merchs}" th:classappend="${merchs.activo} ? table-success : table-danger">
+                    <td th:text="${merchs.id}"></td>
+                    <td th:text="${merchs.nombre}"></td>
+                    <td th:text="${merchs.precio}"></td>
+                    <td th:text="${merchs.stock}"></td>
+                    <td th:text="${merchs.activo}"></td>
+                    <td>
+                        <a th:href="@{/merch/formulario/merch/{id}(id=${merchs.id})}" class="btn btn-warning">Editar</a>
+                        <a th:if="${merchs.activo}" th:href="@{/merch/eliminar/merch/{id}(id=${merchs.id})}" class="btn btn-danger">Desactivar</a>
+                        <a th:unless="${merchs.activo}" th:href="@{/merch/eliminar/merch/{id}(id=${merchs.id})}" class="btn btn-success">Activar</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <div class="row">
+                <div class="col-md-2" id="atras"></div>
+                <div class="col-md-8">
+                    <nav aria-label="Pagination">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" th:classappend="${prev == 0 ? 'disabled' : ''}">
+                                <a class="page-link" th:href="@{|/merch/crudMerch?page=${prev}|}">Anterior</a>
+                            </li>
+                            <li class="page-item" th:each="page : ${pages}" th:classappend="${current == page ? 'active' : ''}">
+                                <a class="page-link" th:href="@{|/merch/crudMerch?page=${page}|}" th:text="${page}"></a>
+                            </li>
+                            <li class="page-item" th:classappend="${current == last ? 'disabled' : ''}">
+                                <a class="page-link" th:href="@{|/merch/crudMerch?page=${next}|}">Siguiente</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
