--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarmerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarmerch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>Formulario Eliminar Imagen</title>
+  <title>Formulario Eliminar</title>
 </head>
 <body>
 
@@ -14,23 +14,19 @@
     <div class="col-12">
       <div class="card">
         <div class="card-body">
-          <form th:action="@{/videojuego/posteliminarimg/videojuego/{idVideojuego}/{id}(idVideojuego=${videojuego.id}, id=${imagenid})}" method="post" enctype="multipart/form-data">
-            <div class="row g-3 text-center mb-3">
+          <form th:action="@{/merch/eliminar/merch/{id}(id=${merch.id})}" method="post" enctype="multipart/form-data">
+            <div class="row g-3 text-center">
               <div class="form-group col-md-12">
-                <h4>Esta seguro de eliminar esta imagen? </h4>
+                <h4 th:if="${merch.activo}">Esta seguro de desactivar este producto?</h4>
+                <h4 th:unless="${merch.activo}">Esta seguro de activar este producto?</h4>
               </div>
             </div>
-
-            <div class="container" style="display: flex; justify-content: center" >
-              <img th:src="@{${imagenlink}}" style="max-width: 75%; min-width: 40%">
-            </div>
-
-            <div class="row m-3 mt-4">
+            <div class="row m-3">
               <div class="col-md-6">
                 <button class="btn btn-outline-secondary" type="submit" style="width:100%">Si</button>
               </div>
               <div class="col-md-6">
-                <a class="btn btn-success" th:href="@{/videojuego/ingresoimg/videojuego/{id}(id=${videojuego.id})}" style="width:100%">No</a>
+                <a class="btn btn-success" th:href="@{/merch/crudMerch}" style="width:100%">No</a>
               </div>
             </div>
           </form>
