--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/merch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/merch.html
@@ -1,10 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Formulario Merch</title>
 </head>
 <body>
 
+<nav th:replace="components/nav-bar :: nav_bar"></nav>
+
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <form th:action="@{/merch/formulario/merch/{id}(id=${merch.id})}" method="post" th:object="${merch}" enctype="multipart/form-data">
+                        <div class="row g-3">
+
+                            <div class="form-group col-md-6">
+                                <label for="nombre">Nombre:</label>
+                                <input type="text" class="form-control" id="nombre" th:field="*{nombre}">
+                                <div class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label for="fabricante">Estudio: </label>
+                                <select class="form-control" id="fabricante" th:field="*{fabricante}">
+                                    <option th:each="fabricante: ${fabricantes}" th:value="${fabricante.id}" th:text="${fabricante.nombre}"></option>
+                                </select>
+                                <div class="text-danger" th:if="${#fields.hasErrors('fabricante')}" th:errors="*{fabricante}"></div>
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label for="imagen_portada">Link imagen de portada:</label>
+                                <input type="text" class="form-control" id="imagen_portada" th:field="*{img_portada}">
+                                <div class="text-danger" th:if="${#fields.hasErrors('img_portada')}" th:errors="*{img_portada}"></div>
+                            </div>
+
+                            <div class="form-group col-md-3">
+                                <label for="precio">Precio:</label>
+                                <input type="number" class="form-control" id="precio" th:field="*{precio}">
+                                <div class="text-danger" th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></div>
+                            </div>
+
+                            <div class="form-group col-md-3">
+                                <label for="stock">Stock:</label>
+                                <input type="number" class="form-control" id="stock" th:field="*{stock}">
+                                <div class="text-danger" th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}"></div>
+                            </div>
+
+                            <div th:if="${merch.id}!=0" class="input-group mb-3 col-md-6">
+                                <label class="col-12">Ingreso de imagenes de muestra:</label>
+                                <a class="btn btn-success"  th:href="@{/merch/ingresoimg/merch/{id}(id=${merch.id})}" type="button">Ingresar imagenes</a>
+                            </div>
+
+
+                            <div class="form-group col-md-12">
+                                <label for="descripcion">Descripción: </label>
+                                <textarea class="form-control" id="descripcion" rows="5" th:field="*{descripcion}"></textarea>
+                                <div class="text-danger" th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"></div>
+                            </div>
+
+                        </div>
+                        <div class="row m-3">
+                            <div class="col-md-6">
+                                <button class="btn btn-outline-secondary" type="reset" style="width:100%">Resetear Formulario</button>
+                            </div>
+                            <div class="col-md-6">
+                                <button class="btn btn-success" type="submit" style="width:100%">Guardar</button>
+                            </div>
+                        </div>
+                    </form>
+
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
