--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/videojuego.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/videojuego.html
@@ -65,7 +65,7 @@
 
 
                             <div th:if="${videojuego.id}!=0" class="input-group mb-3 col-md-6">
-                                <label class="col-12">Ingreso de imagenes de muestra</label>
+                                <label class="col-12">Ingreso de imagenes de muestra:</label>
                                 <a class="btn btn-success"  th:href="@{/videojuego/ingresoimg/videojuego/{id}(id=${videojuego.id})}" type="button">Ingresar imagenes</a>
                             </div>
 
