--- a/pagina-videojuegos/src/main/resources/templates/views/categoriaDetalle.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/categoriaDetalle.html
@@ -5,9 +5,15 @@
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-
+    <style>
+    .page-item.active .page-link {
+      color: #fff !important;
+      background: #f00 !important;
+    }
+</style>
+    <script src="https://kit.fontawesome.com/0b3360c55c.js" crossorigin="anonymous"></script>
 </head>
-<body style="background: #121212" text="#ffffff">
+<body class="d-flex flex-column min-vh-100" style="background: #121212; background-image: url('https://r1.ilikewallpaper.net/iphone-8-wallpapers/download/36659/Digital-dark-color-blue-pattern-background-iphone-8-wallpaper-ilikewallpaper_com.jpg')" text="#ffffff">
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
 <br>
@@ -17,31 +23,26 @@
 
 <hr style="background-color: white; height: 4px;">
 <br>
-<table class="table">
-    <thead class="thead-dark" style="color: white">
-    <tr>
-        <th style="color: white; font-size: 23px" scope="col"></th>
-        <th style="color: white; font-size: 23px" scope="col">Nombre</th>
-        <th style="color: white; font-size: 23px" scope="col">Precio</th>
-        <th style="color: white; font-size: 23px" scope="col">Rating</th>
-        <th style="color: white; font-size: 23px" scope="col"></th>
-
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="videojuegos : ${videojuegos}" style="max-height: 100%; max-width: 100%">
-        <td><img style="height: 100px" th:src="${videojuegos.img_portada}" alt="Imagen Promocional"></td>
-        <td style="color: white; font-size: 35px" th:text="${videojuegos.nombre}"></td>
-        <td style="color: white; font-size: 35px" th:text="${videojuegos.precio}"></td>
-        <td><div style="color: white; font-size: 25px" th:if="${videojuegos.PG}">ATP</div><div style="color: white" th:unless="${videojuegos.PG}">+18</div></td>
-        <td><a th:href="@{/videojuego/detalle/{id}(id=${videojuegos.id})}" class="btn btn-danger">Ver Detalles</a> </td>
-
-    </tr>
-    </tbody>
-</table>
 
 
 
+<div class="container" style="align-items: center;">
+    <div class="row mt-5">
+        <div class="col-12 col-md-3" th:each="videojuego : ${videojuegos}">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
+                <img class="card-img-top" th:src="${videojuego.img_portada}" alt="Imagen de videojuego de estudio">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${videojuego.nombre}"></h5>
+                    <p class="card-text">Precio: $<span th:text="${videojuego.precio}"></span></p>
+                    <div style="color: white; font-size: 15px" th:if="${videojuego.PG}">ATP</div><div style="color: white" th:unless="${videojuego.PG}">+18</div>
+                    <p class="card-text" style="color: white; font-size: 20px">By <span th:text="${videojuego.estudio.nombre}"></span></p>
+                    <a th:href="@{/videojuego/detalle/{id}(id=${videojuego.id})}" style="margin-left: 2.5em;" class="btn btn-danger btn-lg"> Ver detalles!</a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -53,13 +54,13 @@
         <nav aria-label="Pagination">
             <ul class="pagination justify-content-center">
                 <li class="page-item" th:classappend="${prev == 0 ? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{|/categoria/categoriaDetalle?page=${prev}|}">Anterior</a>
+                    <a class="bg-black text-white page-link" th:href="@{|/categoria/categoriaDetalle/{id}?page=${prev}|(id=${categoria.id})}">Anterior</a>
                 </li>
                 <li class="page-item" th:each="page : ${pages}" th:classappend="${current == page ? 'active' : ''}">
-                    <a class="page-link" th:href="@{|/categoria/categoriaDetalle?page=${page}|}" th:text="${page}"></a>
+                    <a class="bg-black text-white page-link" th:href="@{|?page=${page}|}" th:text="${page}"></a>
                 </li>
                 <li class="page-item" th:classappend="${current == last ? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{|/categoria/categoriaDetalle?page=${next}|}">Siguiente</a>
+                    <a class="bg-black text-white page-link" th:href="@{|/categoria/categoriaDetalle/{id}?page=${next}|(id=${categoria.id})}">Siguiente</a>
                 </li>
             </ul>
         </nav>
@@ -67,7 +68,7 @@
     <div class="col-md-2"></div>
 </div>
 
-
+<footer th:replace="components/footer :: footer"></footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 
