--- a/pagina-videojuegos/src/main/resources/templates/views/detalleM.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/detalleM.html
@@ -5,13 +5,81 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Detalle Merch</title>
+    <script src="https://kit.fontawesome.com/0b3360c55c.js" crossorigin="anonymous"></script>
+    <style>
+    img {
+
+        max-width: 500px;
+        max-height: 350px;
+        min-width: 500px;
+        min-height: 350px;
+        display: block;
+        float: left;
+        object-fit: cover;
+    }
+    .box{
+        width: 1200px;
+        height: 800px;
+    }
+
+$large: 1200px;
+
+.wrapper {
+  overflow: hidden;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+  grid-gap: 10px;
+
+  @media screen and (min-width: $large) {
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: auto;
+  }
+}
+
+
+
+.lil-nav {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  grid-row-start: 2;
+
+  @media screen and (min-width: $large) {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: block;
+    grid-row-start: auto;
+  }
+}
+
+.lil-nav a {
+  height: 200px;
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.lil-nav__img {
+  object-fit: cover;
+  filter: saturate(0);
+  transition: 0.3s ease all;
+}
+
+.lil-nav__img:hover {
+  transform: scale(1.05);
+  filter: saturate(1);
+}
+
+
+</style>
+
 </head>
 <body style="background: #121212"class="d-flex flex-column min-vh-100">
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 <div class="container">
     <div class="row mt-5" th:object="${merch}">
         <div class="col-4">
-            <img style="max-width: 85%;" th:src="*{img_portada}" alt="Imagen de portada del videojuego" class="img-fluid">
+            <img style="max-width: 400px; max-height: 350px; min-width: 300px; min-height:300px" th:src="*{img_portada}" alt="Imagen de portada del videojuego" class="img-fluid">
         </div>
         <div class="col text-center">
             <div class="card bg-dark text-white d-flex">
@@ -70,5 +138,6 @@
 
 </div>
 <footer th:replace="components/footer :: footer"></footer>
+
 </body>
 </html>
