--- a/pagina-videojuegos/src/main/resources/templates/views/inicio.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/inicio.html
@@ -3,39 +3,41 @@
     <meta charset="utf-8">
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/0b3360c55c.js" crossorigin="anonymous"></script>
 </head>
-<body style="background: #121212">
+<body  style="background: #121212; background-image: url('https://r1.ilikewallpaper.net/iphone-8-wallpapers/download/36659/Digital-dark-color-blue-pattern-background-iphone-8-wallpaper-ilikewallpaper_com.jpg')" class="d-flex flex-column min-vh-100">
  <nav th:replace="components/nav-bar :: nav_bar"></nav>
- <div class="container">
+ <br>
+ <div class="container" style="max-width: 1000px">
 
          <div class="card">
-                <img th:src="${ultVideojuego.img_portada}" style=" height: 10rem;">
+                <img th:src="${ultVideojuego.img_portada}" style=" height: 25rem;">
 
             <div class="card-img-overlay card-inverse">
-                <div class="text-stroke text-white pb-5" style="text-decoration: underline; font-size: 1.875em"><a style="text-decoration:none; color: white" th:href="@{/videojuego/detalle/{id}(id=${ultVideojuego.id})}">Ultimo Lanzamiento!</a></div>
+                <div class="text-stroke text-white pb-5" style="text-decoration: underline; font-size: 1.875em; color: #525151!important"><a style="text-decoration:none; color: white" th:href="@{/videojuego/detalle/{id}(id=${ultVideojuego.id})}">Ultimo Lanzamiento!</a></div>
             </div>
          </div>
     </div>
  <br>
 <div>
-    <div class="container">
+    <div class="container" style="max-width: 1100px">
         <div class="row mt-3">
-            <div class="flex" style="align-items: left">
+            <div class="flex" style="align-items: center">
                 <form class="form-group mx-sm-3 mb-2" th:action="@{/videojuego/busqueda}">
-                    <input class="form-control mr-sm-1" type="search" style="width:80%" placeholder="Ingrese un titulo..." aria-label="Search" name="query">
-                    <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Buscar</button>
+                    <input class="form-control mr-sm-1" type="search" style="width:100%; color: #525151" placeholder="Ingrese un titulo..." aria-label="Search" name="query">
+                    <button class="btn btn-outline-danger my-2 my-sm-0" style="margin-left:500px" type="submit">Buscar</button>
                 </form>
             </div>
             </div>
     </div>
 </div>
 
+
+
  <br>
  <br>
-    <!--<div th:each="categoria : ${categorias}">
-        <div th:text="${categoria.tipo}"></div>
-    </div>-->
+ <hr style="background-color: white; height: 4px;">
+ <hr style="background-color: white; height: 4px;">
 
 </section>
  <br>
@@ -44,14 +46,19 @@
      <br>
 
  </div>
-     <div class="container" style="align-items: center; justify-content: center; display: flex">
-         <div class="col-8"><br>
-             <div class="div">
-                 <div class="btn-group" th:each="categoria : ${categorias}">
-                     <a th:href="@{/categoria/categoriaDetalle/{id}(id=${categoria.id})}" style="margin-left: 2.5em;" class="btn btn-secondary btn-lg" th:text="${categoria.tipo}"></a>
+ </div>
 
-                 </div>
-             </div>
+ <div class="container" style="align-items: center; justify-content: center; display: flex">
+     <div class="row mt-5">
+         <div class="col-12 col-md-3" th:each="categoria : ${categorias}">
+                <div class="card text-white bg-dark mb-3" style="width: 18rem;">
+                    <img class="card-img-top" src="https://i.pinimg.com/originals/0f/33/5d/0f335d0d493ffaf8a67bd7dfe14003be.jpg" alt="Imagen categoria">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${categoria.tipo}"></h5>
+                        <a th:href="@{/categoria/categoriaDetalle/{id}(id=${categoria.id})}" style="margin-left: 2.5em;" class="btn btn-secondary btn-lg"> Ver juegos!</a>
+
+                    </div>
+                </div>
          </div>
      </div>
  </div>
@@ -63,18 +70,25 @@
  <div><div class="container" style="align-items: center; justify-content: center; display: flex">
          <h2 style="color: white">- ESTUDIOS -</h2>
          <br>
-    </div>
-     <div class="container" style="align-items: center; justify-content: center; display: flex">
-         <div class="col-8"><br>
-             <div class="div">
-                 <div class="btn-group" th:each="estudio : ${estudios}">
+ </div>
+ </div>
 
-                     <a th:href="@{/estudio/estudioDetalle/{id}(id=${estudio.id})}" style="margin-left: 2.5em;" class="btn btn-secondary btn-lg" th:text="${estudio.nombre}"></a>
+
+ <div class="container" style="align-items: center; justify-content: center; display: flex">
+     <div class="row mt-5">
+         <div class="col-12 col-md-3" th:each="estudio : ${estudios}">
+             <div class="card text-white bg-dark mb-3" style="width: 18rem;">
+                 <img class="card-img-top" src="https://i.pinimg.com/originals/4e/2d/40/4e2d40c3af8850c167e1c27432e2b5e3.jpg" alt="Imagen estudio">
+                 <div class="card-body">
+                     <h5 class="card-title" th:text="${estudio.nombre}"></h5>
+                     <a th:href="@{/estudio/estudioDetalle/{id}(id=${estudio.id})}" style="margin-left: 2.5em;" class="btn btn-secondary btn-lg"> Ver juegos!</a>
+
                  </div>
              </div>
          </div>
      </div>
  </div>
+
 
  <br>
  <br>
@@ -85,8 +99,11 @@
      <br>
 
  </div></div>
+ <br>
+ <br>
+ <footer th:replace="components/footer :: footer"></footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
- <a th:href="@{/usuarios/direccion-tarjeta}">prueba</a>
+
  </body></html>
 
